--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "api-nodejs-mysql",
+  "name": "backend-crudapp",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
+  "description": "Backend de crudAPP",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node ."
   },
   "keywords": [],
   "author": "ivoryredgrave",
